--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@types/cypress": "^1.1.3",
     "cypress": "^9.7.0",
     "webpack-dev-server": "^3.11.2"
   }
